# AIStrategyTestEngine

./: CMakeLists.txt  main.c  testmain.c
include/: DrawUtils.h  GameMap.h  StorkEngine.h  StorkEngine_Commands.h  StorkEngine_Data.h  StorkEngine_GL.h  StorkEngine_Graphics.h  StorkEngine_def.h
src/: CommandBase.c  DrawUtils.c  GameMap.c  Graphics.c  Input.c  Projectile.c  StorkEngine.c  StorkEngine_GL.c  StrategyConnector.c
